--- a/main.html
+++ b/main.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Color Box</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -18,7 +17,7 @@
 		<button id="green">GREEN</button>
 	</div>
 
-	<script   src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
