--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
   <div id="box">
     <h1 id="text">CHANGE MY COLOR</h1>
     <div id="error">
-      <p>Doesn't get darker than that!</p>
+      <p>It doesn't get darker than that!</p>
+      <p>Try another color...</p>
     </div>
   </div>
   <div id="btn">
